src/objects/Apttus__Reviewer__c.object
<CustomObject>
    <description>Holds the reviewer&apos;s information for parallel review of a document.</description>
    <fields>
        <fullName>Apttus__Comment__c</fullName>
        <description>Comments on Cancel/End Review.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comments on Cancel/End Review.</inlineHelpText>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__EndReviewDocumentVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Review Document Version</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Reviewer</relationshipLabel>
        <relationshipName>Reviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__EndedCancelledBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the User who has cancelled or Ended the Review.</description>
        <inlineHelpText>Review Ended by user.</inlineHelpText>
        <label>Ended/Cancelled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__EndedCancelledOn__c</fullName>
        <description>Review End Date/time</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Review End Date/time</inlineHelpText>
        <label>Ended/Cancelled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__MemberId__c</fullName>
        <description>Member id of MS Teams</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Member id of MS Teams</inlineHelpText>
        <label>Member Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Mode__c</fullName>
        <description>Mode in which Review is completed</description>
        <inlineHelpText>Mode in which Review is completed</inlineHelpText>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>On Behalf</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__RecipientType__c</fullName>
        <description>Type of Recipient added.</description>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ReviewCycle__c</fullName>
        <description>Review Cycle Id</description>
        <inlineHelpText>Review Cycle Id</inlineHelpText>
        <label>Review Cycle</label>
        <referenceTo>Apttus__ReviewCycle__c</referenceTo>
        <relationshipLabel>Reviewers</relationshipLabel>
        <relationshipName>Reviewers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__ReviewStatus__c</fullName>
        <description>Review Status of the reviewer.</description>
        <inlineHelpText>Review Status of the reviewer.</inlineHelpText>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ReviewerEmail__c</fullName>
        <description>Email Id of the user</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Email Id of the user</inlineHelpText>
        <label>Reviewer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Apttus__UserorContactId__c</fullName>
        <description>holds user id or contact id based on the recipient type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User or Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Reviewer</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Reviewer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>